--- a/roles/mikeandwan_us/tasks/maw_host_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_host_init.yml
@@ -3,14 +3,17 @@
   become: true
   ansible.builtin.file:
     path: "{{ item }}"
-    #recurse: true
+    # recurse: true
     state: directory
+    owner: root
+    mode: u+rwx,go+rx
   loop: "{{ asset_dirs }}"
 
 - name: ensure maw-uploads directory exists
   ansible.builtin.file:
     path: "{{ mawus_config.upload_dir }}"
     state: directory
+    mode: u+rwx,go+rx
   when: mawus_config.upload_dir | length > 0
 
 # todo: copy files for prod
