--- a/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
@@ -5,7 +5,6 @@
     image: "docker.io/postgres:{{ mawus_config.version_postgres }}"
     env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
     interactive: true
-    rm: true
     state: started
     command:
       - psql
@@ -18,7 +17,13 @@
       - '-c'
       - "ALTER ROLE {{ item.username }} WITH PASSWORD '{{ item.password }}';"
 
-- name: wait for set role container to exit
-  ansible.builtin.include_tasks: wait_for_container_to_exit.yml
+- name: wait for set role container to stop
+  ansible.builtin.include_tasks: wait_for_container_to_stop.yml
   vars:
     container_name: "{{ mawus_config.env }}-maw-pginit-role-password"
+    exit_code_varname: role_pwd_result
+
+- name: fail if password not set
+  ansible.builtin.fail:
+    msg: role passwords not properly set
+  failed_when: role_pwd_result | int != 0
